mock-up for greenbelt

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -9,41 +9,46 @@
 		<div class="span4">
 			<div class="row">
 				<div class="span1">
-					<div style="border: 1px solid black; height:100px; width: 100px; padding-left: .5em;">
-						<p>PROFILE LOGO</p>
+					<div style="padding-left: .5em;">
+						<img src="/assets/logo-smaller.png" />
 					</div>
 				</div>
 				<div class="span4" style="margin-bottom: 1em;">
-					<h1>Buena Vista Neighborhood Association</h1><br>
-					<a href="http://www.bvnasf.com/index.html">www.bvnasf.com</a>
+					<h1>Greenbelt Alliance</h1><br>
+					<a href="http://www.greenbelt.org">www.greenbelt.org</a>
 				</div>
 			</div>
 			<div style="height:400px; padding-left: .5em; margin-top: 1em;">
 				<h2 class="underline">About</h2>
-				<p>Buena Vista Neighborhood Association (BVNA) is one of the larger, more effective neighborhood organizations in San Francisco, with over 400 current Members. Founded in 1964, BVNA is a forum for neighbors to share information and ideas, and to advocate when needed on issues that affect our neighborhood.BVNA serves residents and property owners in the area generally bordered by Oak Street on the north; Divisadero/Castro Streets on the east; 16th Street, upper States, Levant, Lower Terrace and Saturn Streets to Roosevelt Way and 17th Street on the south; and Ashbury Street on the west. <br>BVNA cooperates with and supports several more-local neighborhood groups within its overall area.About 80% of BVNA’s service area (and Buena Vista Park itself) are in S.F. Supervisor District 8 (Sup. Bevan Dufty), with the northern 20% of our area in District 5 (Sup. Ross Mirkarimi).<br>Our neighborhood is served by S.F. Police Department’s Park Station.BVNA monitors legislation and advocates for our neighborhood at City Hall. BVNA does not endorse political candidates or most ballot propositions, nor does it usually take a position on individual property zoning matters, etc. BVNA Membership is open to all (property owners, renters and businesses) with an interest in Buena Vista Park and the surrounding neighborhoods. </p>
+				<p>Greenbelt Alliance is the champion of the places that make the Bay Area special. We defend the Bay Area’s natural and agricultural landscape from development – the hills that offer stunning views, the valleys and streams that provide clean water, the farms and ranches that give us fresh, local food. We help create great cities and neighborhoods – healthy places where people can walk and bike, communities with parks and shops, transportation options, and homes that are affordable. Together these amazing places drive the Bay Area’s economic vitality and quality of life.<br>At Greenbelt Alliance we believe in collaboration. We bring together residents and decision-makers, business leaders, labor unions and others to find innovative solutions to our region’s growth challenges. We work both regionally and locally, blending expertise with on-the-ground action to help people explore our great region, make their neighborhoods thrive and save treasured landscapes from sprawl.<br>
+
+The places that make the Bay Area special are incredibly diverse, which is why Greenbelt Alliance’s work takes many forms, from saving farms in Santa Clara County and wildlife habitat in Sonoma County to revitalizing commercial strips in Silicon Valley and Oakland. For more than 50 years, we have succeeded in helping to shape the amazing places of the Bay Area.</p>
 			</div>
 		</div>
 		<div class="span8">
 			<div class="row">
 				<div class="span8">
-					<div style="background: #CCCCCC; height:300px; margin-top">
+					<img src="/assets/Transbay-Transit-Center-9.jpg" />
+					<!--
+					 <div style="background: #CCCCCC; height:300px; margin-top">
 						<div id="myCarousel" class="carousel slide">
 						  <ol class="carousel-indicators">
 						    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
 						    <li data-target="#myCarousel" data-slide-to="1"></li>
 						    <li data-target="#myCarousel" data-slide-to="2"></li>
 						  </ol>
-						  <!-- Carousel items -->
+						 Carousel items 
 						  <div class="carousel-inner">
 						    <div class="active item">…</div>
 						    <div class="item">…</div>
 						    <div class="item">…</div>
 						  </div>
-						  <!-- Carousel nav -->
+						  Carousel nav
 						  <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
 						  <a class="carousel-control right" href="#myCarousel" data-slide="next" >&rsaquo;</a>
 						</div>
-					</div>
+					</div> 
+				-->
 				</div>
 			</div>
 			<div class="row">
@@ -52,9 +57,9 @@
 						<h2 class="underline">Projects</h4>
 						<!-- list all projects created by this user -->
 						<div>
-							<h5><a href="#">Buena Vista Park Southest Slope Improvement Project</a></h5>
-							<span class="label">TAGS</span>&nbsp;<span class="label">TAGS</span>
-							<p>We are very pleased to announce that work will begin on the Buena Vista Park Southest Slope Improvement Project on or about Monday, March 16.  This $2.6 million S.F. Recreation & Park Dept.  Project is funded...  <em><a href="#">read more</a></em> </p><br><br>
+							<h5><a href="/projects/5">Transbay Transit Center</a></h5>
+							<span class="label">Transit</span>&nbsp;<span class="label">Urban Design</span>
+							<p>The Transbay Transit Center Project is a visionary transportation and housing project that transforms downtown San Francisco and the San Francisco Bay Area’s regional transportation system by creating a “Grand Central Station of the West” in the heart of a new transit-friendly neighborhood. The $4 billion project... <em><a href="/projects/5">read more</a></em> </p><br><br>
 						</div>
 						<div>
 							<h5><a href="#">Bizarro Buena Vista Park Southest Slope Improvement Project</a></h5>
