--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -31,6 +31,7 @@
 				</div>
 				<div class="span4">
 					<div style="height:300px;" id="map"></div>
+          <script id="geojson" type="application/json"><%= raw @project.geojson %></script>
 				</div>
 			</div>
 			<div class="row social">
