rename header items

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,9 +16,8 @@
           <%= link_to image_tag("ou_bootstrap_logo.png", :border => 0), "/", id: "logo" %> 
           <nav>
             <ul class="nav pull-left">
-              <li><%= link_to "Cities", '#' %></li>
-              <li><%= link_to "Projects", projects_path %></li>
-              <li><%= link_to "Add Project", new_project_path %></li>
+              <li><%= link_to "Explore", projects_path %></li>
+              <li><%= link_to "Add Page", new_project_path %></li>
             </ul>
           </nav>
           <div class="pull-right" style="margin-top: .35em">
