redesign front page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -98,6 +98,9 @@ p {
   border-bottom: 1px solid $lightgray;
   padding-bottom: .25em;
 }
+.hero-unit {
+        background-image: url(/assets/SanFrancisco.jpg);    
+}
 
 
 /* footer */
