formating for project pages

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -157,7 +157,10 @@ footer ul li {
   .data{
     margin-top: .5em;
   }
-
+  .info_box{
+  border: #eeeeee;
+  padding: .5em;
+  }
 }
 
 /* Image Carousel */
