--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -4,6 +4,14 @@
 
 /* Project Index */
 
+.info_box{
+	border: 1px solid #eeeeee;
+	border-top: 2px solid #B8B8B8;
+	padding: .7em;
+	margin-top: 1em;
+}
+
+
 .project_thmbnl{
 	-moz-border-radius: 4px;
 	border-radius: 4px;
