--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,8 +2,8 @@
 	<div class="row" style="margin-top: 3em; margin-bottom: 3em;">
 		<div class="span6">
 			<div style="background: rgba(255, 255, 255, 0.8); padding: 1em; padding-left: 2em; -moz-border-radius: 4px;border-radius: 4px;">
-				<h1 style="text-align: left; line-height: 1.1; -ms-word-break: break-all; word-break: break-all;">Planning cities collaboratively.</h1>
-				<p style="font-size: 1.05em; margin-top: .85em; line-height: 1.25;">Simple, useful tools for collecting and sharing urban planning information - within a group or beyond.</p>
+				<h1 style="text-align: left; line-height: 1.1; -ms-word-break: break-all; word-break: break-all;">Creating places collaboratively.</h1>
+				<p style="font-size: 1.05em; margin-top: .85em; line-height: 1.25;">Simple, useful tools for collecting and sharing information in the built environment - within a group or beyond.</p>
 			</div>
 		</div>
 		<div class="span4" style="margin-top: 1em;">
