--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,6 +1,5 @@
-<div class="project">
 	<div class="row">
-		<div class="span12" style="background: #FCFCFC; border-bottom: 1px solid #eeeeee; margin-bottom: 1em; margin-top: .75em; padding: .75em;">
+		<div class="span12 sub_header">
 			<h1><%= @project.title %></h1>&nbsp;&nbsp;&nbsp;&nbsp;
 			<%= link_to 'Edit', edit_project_path(@project) %> |
 			<%= link_to 'Back', projects_path %>
@@ -84,7 +83,7 @@
 			</div>
 		</div>
 	</div>
-</div>
+
 
 
 <!--
