--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,80 +1,55 @@
 
 <div class="project">
 	<div class="row">
-		<div class="span12" style="margin-bottom: .3em;">
-			<h1></h1>
+		<div class="span12 sub_header">
+			<h1>PROFILE TITLE</h1>&nbsp;&nbsp;&nbsp;&nbsp;
 		</div>
 	</div>
 	<div class="row">
 		<div class="span4">
-			<div class="row">
-				<div class="span1">
-					<div style="padding-left: .5em;">
-						<img src="/assets/logo-smaller.png" />
-					</div>
-				</div>
-				<div class="span4" style="margin-bottom: 1em;">
-					<h1>Greenbelt Alliance</h1><br>
-					<a href="http://www.greenbelt.org">www.greenbelt.org</a>
-				</div>
-			</div>
-			<div style="height:400px; padding-left: .5em; margin-top: 1em;">
-				<h2 class="underline">About</h2>
-				<p>Greenbelt Alliance is the champion of the places that make the Bay Area special. We defend the Bay Area’s natural and agricultural landscape from development – the hills that offer stunning views, the valleys and streams that provide clean water, the farms and ranches that give us fresh, local food. We help create great cities and neighborhoods – healthy places where people can walk and bike, communities with parks and shops, transportation options, and homes that are affordable. Together these amazing places drive the Bay Area’s economic vitality and quality of life.<br>At Greenbelt Alliance we believe in collaboration. We bring together residents and decision-makers, business leaders, labor unions and others to find innovative solutions to our region’s growth challenges. We work both regionally and locally, blending expertise with on-the-ground action to help people explore our great region, make their neighborhoods thrive and save treasured landscapes from sprawl.<br>
-
-The places that make the Bay Area special are incredibly diverse, which is why Greenbelt Alliance’s work takes many forms, from saving farms in Santa Clara County and wildlife habitat in Sonoma County to revitalizing commercial strips in Silicon Valley and Oakland. For more than 50 years, we have succeeded in helping to shape the amazing places of the Bay Area.</p>
-			</div>
+			<h5>Organization</h5>
+			<h5>San Francisco</h5>
+				<h4 class="underline" style="margin-top: 1em;">ABOUT</h4>
+				<p class="about">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ac mi eget diam commodo cursus ac vitae dolor. Morbi tincidunt dapibus lectus, vehicula luctus tortor varius at. Maecenas tempor tellus in nibh dignissim, vel auctor velit tincidunt. Aliquam eget tempor elit. Sed pharetra viverra felis, eget blandit magna lacinia et. Vivamus ullamcorper, lacus ut cursus sollicitudin, lorem velit dignissim purus, in dapibus neque lectus nec lorem. Sed mollis tortor nisl, at convallis nibh sodales eu. Praesent imperdiet turpis ac lectus viverra, a fermentum ipsum tincidunt. Curabitur eu luctus sapien. Etiam et nibh in dui pulvinar tempor at at felis. In eget metus dignissim, facilisis ipsum sit amet, dictum nisi. Pellentesque luctus non ante sed vehicula.Vivamus sed felis vulputate, tempor magna ut, commodo metus. Proin vel libero pulvinar, mattis nibh eget, laoreet velit. Nullam vulputate venenatis turpis vel aliquet. Aliquam elit lectus, aliquam at tempor id, venenatis suscipit massa. Ut vitae rutrum leo. Phasellus et dignissim nibh, ut ornare mi. Morbi ut eros aliquet, congue nulla quis, suscipit metus. Suspendisse in quam sed augue euismod porttitor et nec ligula.</p>
 		</div>
 		<div class="span8">
-			<div class="row">
-				<div class="span8">
-					<img src="/assets/Transbay-Transit-Center-9.jpg" />
-					<!--
-					 <div style="background: #CCCCCC; height:300px; margin-top">
-						<div id="myCarousel" class="carousel slide">
-						  <ol class="carousel-indicators">
-						    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-						    <li data-target="#myCarousel" data-slide-to="1"></li>
-						    <li data-target="#myCarousel" data-slide-to="2"></li>
-						  </ol>
-						 Carousel items 
-						  <div class="carousel-inner">
-						    <div class="active item">…</div>
-						    <div class="item">…</div>
-						    <div class="item">…</div>
-						  </div>
-						  Carousel nav
-						  <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
-						  <a class="carousel-control right" href="#myCarousel" data-slide="next" >&rsaquo;</a>
-						</div>
-					</div> 
-				-->
+			<h4 class="underline">PROFILE'S PROJECTS</h4>
+			<div class="span3 info_box">
+			    <h2 style="display: inline;">Project Title</h2>
+			    <div>
 				</div>
-			</div>
-			<div class="row">
-				<div class="span4">
-					<div style="height: 400px; margin-top: 1em;">
-						<h2 class="underline">Projects</h4>
-						<!-- list all projects created by this user -->
-						<div>
-							<h5><a href="/projects/5">Transbay Transit Center</a></h5>
-							<span class="label">Transit</span>&nbsp;<span class="label">Urban Design</span>
-							<p>The Transbay Transit Center Project is a visionary transportation and housing project that transforms downtown San Francisco and the San Francisco Bay Area’s regional transportation system by creating a “Grand Central Station of the West” in the heart of a new transit-friendly neighborhood. The $4 billion project... <em><a href="/projects/5">read more</a></em> </p><br><br>
-						</div>
-						<div>
-							<h5><a href="#">Bizarro Buena Vista Park Southest Slope Improvement Project</a></h5>
-							<span class="label">TAGS</span>&nbsp;<span class="label">TAGS</span>
-							<p>We are very pleased to announce that work will begin on the Bizarro Buena Vista Park Southest Slope Improvement Project on or about Monday, March 16.  This $2.6 million S.F. Recreation & Park Dept.  Project is funded...  <em><a href="#">read more</a></em> </p>
-						</div>
-
-					</div>
+			    <div class="image_thmbnl"></div>
+			    <em>Location</em>
+			    <span class="label" style="margin-bottom: .5em; margin-top: .4em;">TAGS</span>
+			    <div class="description">orem ipsum dolor sit amet, consectetur adipiscing elit. Nam ac mi eget diam commodo cursus ac vitae dolor.&nbsp;&nbsp;<em>read more</em></div>
+		  </div>
+		  <div class="span3 info_box">
+			    <h2 style="display: inline;">Project Title</h2>
+			    <div>
 				</div>
-				<div class="span4">
-					<div style="border: 1px solid black; height: 400px; margin-top: 1em;">
-						<div id="map">Map</div>
-					</div>
+			    <div class="image_thmbnl"></div>
+			    <em>Location</em>
+			    <span class="label" style="margin-bottom: .5em; margin-top: .4em;">TAGS</span>
+			    <div class="description">orem ipsum dolor sit amet, consectetur adipiscing elit. Nam ac mi eget diam commodo cursus ac vitae dolor.&nbsp;&nbsp;<em>read more</em></div>
+		  </div>
+		  <div class="span3 info_box">
+			    <h2 style="display: inline;">Project Title</h2>
+			    <div>
 				</div>
-			</div>
+			    <div class="image_thmbnl"></div>
+			    <em>Location</em>
+			    <span class="label" style="margin-bottom: .5em; margin-top: .4em;">TAGS</span>
+			    <div class="description">orem ipsum dolor sit amet, consectetur adipiscing elit. Nam ac mi eget diam commodo cursus ac vitae dolor.&nbsp;&nbsp;<em>read more</em></div>
+		  </div>
+		  <div class="span3 info_box">
+			    <h2 style="display: inline;">Project Title</h2>
+			    <div>
+				</div>
+			    <div class="image_thmbnl"></div>
+			    <em>Location</em>
+			    <span class="label" style="margin-bottom: .5em; margin-top: .4em;">TAGS</span>
+			    <div class="description">orem ipsum dolor sit amet, consectetur adipiscing elit. Nam ac mi eget diam commodo cursus ac vitae dolor.&nbsp;&nbsp;<em>read more</em></div>
+		  </div>
 		</div>
 		
 	</div>	
