updating static pages and links in the footer

--- a/app/views/pages/FAQ.html.erb
+++ b/app/views/pages/FAQ.html.erb
@@ -2,37 +2,15 @@
 <h1>FAQ</h1> <br>	
 
 <h2>What is the purpose of OpenUrban?</h2>
-<p>Make information on current urban development free and easily accessible to everyone. Our secondary goal is to catalyze collaboration in this realm. To this end we think sharing and discussing information is the foundation for any effective collaborative process.</p><br>
-
-<h2>Who can contribute to OpenUrban?</h2>
-<p>Anyone.</p><br>
-
-
-<h2>What kind of content can I put on OpenUrban?</h2>
-<p>Content on OpenUrban is focused on current and proposed urban development. (<a href="#">See Guidelines</a>).</p><br>
+<p>OpenUrban is a platform for creating and sharing projects, plans, policies and issues related to the built environment</p><br>
 
 <h2>Why isn't there any content in my city?</h2>
-<p>Because no one has entered any yet - you can be the first person! Create an account or log in to map and write a short article about a project in your city. You don't have to know all the information, other people can help fill in the rest.</p> <br>
-
-<h2>Is the site unbounded geographically?</h2>
-<p>Yes, the site is unbounded. You can add information on any location as long as the content relates to current or proposed urban development.</p><br>
-
-<h2>How is content edited and reviewed?</h2>
-<p>OpenUrban is edited and reviewed by you and people like you - the general public. There are a few high level administrators to make sure there is no abusive behavior or inappropriate content. Otherwise this is your space to share information and ideas with other people in your city and around the world.</p><br>
-
-<h2>What if I see something that is wrong or inaccurate?</h2>
-<p>If you see something wrong change it. This is the point of OpenUrban, everything is constantly updated - just like a city. However, do be careful if you are removing or altering something that has citation. Repeatedly deleting appropriate and accurately cited content will result in administrative actions being taken against the offender. Any disputes between users which cannot be resolved will be reviewed by administrators.</p><br>
-
-<h2>Do you plan to pilot it in certain cities?</h2>
-<p>As we mentioned earlier, we will not restrict the site to specific locations. However, we will focus on promoting the project in specific cities. For OpenUrban to work it's crucial that a city has a critical mass of contributors and information. We started in Istanbul and have had subsequent activity in Seattle and New York. If you think OpenUrban would be great in your city and you want to promote it, send us an email and we can help you organize.</p><br>
-
-<h2>What languages are used on OpenUrban?</h2>
-<p>Currently the site is in English and Turkish. If you're interested in expanding OpenUrban in your country and want to help translate and maintain the site in your language send us an email at <a href="#">info(at)openurban(dot)com</a>.</p><br>
+<p>Because no one has entered any yet - you can be the first person! Create an account or log in.</p> <br>
 
 <h2>Is OpenUrban non-profit or for profit?</h2>
-<p>OpenUrban is a non-profit registered in the State of Washington and we are currently applying for 501(c)3 status.</p><br>
+<p>OpenUrban is a non-profit registered in the State of Washington. We are currently applying for 501(c)3 status.</p><br>
 
 <h2>Are you looking for partnerships?</h2> 
-<p>Yes! We're always looking to partner with organizations and governmental institutions who are interested in making information about urban development more accesible and open.</p>
+<p>Yes! We're always looking to partner with organizations and governmental institutions who are interested in making information about cities and the built environment more accesible and open.</p>
 
 </div>
